--- a/index.html
+++ b/index.html
@@ -11,15 +11,31 @@
 <body>
     <!-- cabecera-->
     <header>
-
+        <h1>Soy la lista super!</h1>
     </header>
     <!-- principal content-->
     <main>
-
+        <ul>
+            <li>Frutas</li>
+            <ol>
+                <li>Manzana</li>
+                <li>Platano</li>
+            </ol>
+            <li>Carnes</li>
+            <ol>
+                <li>Pollo</li>
+                <li>Carne molida</li>
+            </ol>
+            <li>Verdudas</li>
+            <ol>
+                <li>Limón</li>
+                <li><a href="">Zanahoria</a></li>
+            </ol>
+        </ul>
     </main>
     <!-- pie de la pàgina-->
     <footer>
-
+    <h5>Creado con amor desde el curso de "definitivo de html y css"</h5>
     </footer>
 </body>
 </html>
